chore: enabled record count request in backend
