# cmd/mb3server/api/openapi.yaml
@@ -194,6 +194,17 @@ paths:
                 type: string
           description: A compound SVG
       summary: The SVG image for an accession
+  /records/count:    
+    get:
+      summary: The number of all records
+      operationId: getCount
+      responses:
+        '200':
+          description: "The record count"
+          content:
+            application/json:
+              schema:
+                type: string
   /filter/options:
     get:
       operationId: getFilterOptions
